// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonPlus should render correctly with add variant 1`] = `
<div>
  <button
    aria-label="add"
    class="MuiButtonBase-root MuiFab-root root_backgroundColor-#3f51b5 root_color-#fff"
    data-testid="floating-button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ButtonPlus should render correctly with home variant 1`] = `
<div>
  <button
    aria-label="home"
    class="MuiButtonBase-root MuiFab-root root_backgroundColor-#3f51b5 root_color-#fff"
    data-testid="floating-button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
